--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="page-wrapper">
         <div class="page">
             <div class="bg">
-                <video src="img/bg.mp4" loop autoplay muted preload></video>
+                <video src="img/fon.mp4" loop autoplay muted preload></video>
                 <div class="bg-shd"></div>
             </div>
             <div class="menu-wrapper active" id="menuwr">
