--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="page-wrapper">
         <div class="page">
             <div class="bg">
-                <video poster="img/fon-poster.png" loop autoplay preload>
+                <video poster="img/fon-poster.png" loop autoplay preload muted>
                      <source src="img/fon.mp4" type="video/mp4">
                 </video>
                 <div class="bg-shd"></div>
